  dynamicly created property). (Felipe)
- Fixed bug #45529 (new DateTimeZone() and date_create()->getTimezone() behave
  different). (Derick)
- Fixed bug #45303 (Opening php:// wrapper in append mode results in a warning).
  (Arnaud)
- Fixed bug #44938 (gettext functions crash with overly long domain).
  (Christian Schneider, Ilia)
- Fixed bug #44327 (PDORow::queryString property & numeric offsets / Crash).
  (Felipe)
- Fixed bug #43452 (strings containing a weekday, or a number plus weekday
  behaved incorrect of the current day-of-week was the same as the one in the
  phrase).(Derick)
- Fixed bug #43353 (wrong detection of 'data' wrapper causes notice). 
  (gk at gknw dot de, Arnaud)
- Fixed bug #42855 (dns_get_record() doesn't return all text from TXT record).
  (a dot u dot savchuk at gmail dot com)
- Fixed bug #42718 (FILTER_UNSAFE_RAW not applied when configured as default
  filter). (Arnaud)
- Fixed bug #42294 (Unified solution for round() based on C99 round). (Ilia)

- Fixed endless loop in PDOStatement::debugDumpParams().
  (jonah.harris at gmail dot com)
- Fixed ability to use "internal" heaps in extensions. (Arnaud, Dmitry)
- Fixed weekdays adding/subtracting algorithm. (Derick)
- Fixed some ambiguities in the date parser. (Derick)
- Fixed a bug with the YYYY-MM format not resetting the day correctly. (Derick)
- Fixed a bug in the DateTime->modify() methods, it would not use the advanced
  relative time strings. (Derick)

23 Oct 2008, PHP 5.2.7RC2
- Upgraded bundled libzip to 0.9.0. (Pierre)

- Fixed extraction of zip files or directories when the entry name is 
  a relative path. (Pierre)
- Fixed read or write errors for large zip archives. (Pierre)

- Fixed bug #46360 (TCP_NODELAY constant for socket_{get,set}_option). 
  (bugs at trick dot vanstaveren dot us)
- Fixed bug #46343 (IPv6 address filter accepts invalid address). (Ilia)
- Fixed bug #46335 (DOMText::splitText doesn't handle multibyte characters).
  (Rob)